# big_data_project

./: 01_generate_big_data.py  02_benchmark.py  03_analysis.py  README.md  app.py  main.py  pyproject.toml  requirements.txt
outputs/: big_data_model.pkl  big_data_scaler.pkl
