[project]
name = "big-data-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dask[dataframe]>=2026.1.2",
    "joblib>=1.5.3",
    "numpy>=2.4.2",
    "pandas>=2.3.3",
    "psutil>=7.2.2",
    "pyarrow>=23.0.0",
    "scikit-learn>=1.8.0",
    "streamlit>=1.54.0",
]
